# specifications

./: .bandit.yml  .editorconfig  .gitignore  .pylintrc  CHANGELOG.md  Makefile  pyproject.toml  setup.cfg
.github/workflows/: main.yml
specifications/: __init__.py
tests/: test_specifications.py  test_tmp.py
