[tool.poetry]
name = "specifications"
version = "0.1.0"
description = "Python implementation of specification pattern"
license = "MIT"
authors = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
maintainers = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
readme = "README.md"
homepage = "https://pypi.org/project/specifications"
repository = "https://github.com/rugleb/specifications"
documentation = "https://github.com/rugleb/specifications/blob/master/README.md"
keywords = [
    "python",
    "specification",
    "pattern",
]

[tool.poetry.dependencies]
python = "^3.8"
attrs = "^21.2"

[tool.poetry.dev-dependencies]
add-trailing-comma = "^2.1"
autopep8 = "^1.5"
bandit = "^1.7"
coverage = "^5.5"
flake8 = "^3.9"
isort = "^5.8"
mypy = "^0.812"
pylint = "^2.8"
pytest = "^6.2"
pytest-cov = "^2.12"
pytest-sugar = "^0.9"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
