[tool.poetry]
name = "specifications"
version = "0.1.0"
description = "Python implementation of specification pattern"
license = "MIT"
authors = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
maintainers = [
    "Gleb Karpushkin <rugleb@gmail.com>",
]
readme = "README.md"
homepage = "https://pypi.org/project/specifications"
repository = "https://github.com/rugleb/specifications"
documentation = "https://github.com/rugleb/specifications/blob/master/README.md"
keywords = [
    "python",
    "specification",
    "design",
    "pattern",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
add-trailing-comma = "^2.1.0"
autopep8 = "^1.5.7"
bandit = "^1.7.0"
cyclonedx-bom = "^0.4.3"
factory-boy = "^3.2.0"
flake8 = "^3.9.2"
flake8-annotations-complexity = "^0.0.6"
flake8-annotations-coverage = "^0.0.5"
flake8-broken-line = "^0.3.0"
flake8-bugbear = "^21.4.3"
flake8-class-attributes-order = "^0.1.2"
flake8-cognitive-complexity = "^0.1.0"
flake8-comprehensions = "^3.6.1"
flake8-expression-complexity = "^0.0.9"
flake8-multiline-containers = "^0.0.18"
flake8-pytest-style = "^1.5.0"
flake8-quotes = "^3.3.0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.10.2"
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"
